--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
           "[JavaScript](#javascript)",
           "[C#](#c-1)",
           "[CSS](#css)",
-          "[C](undefined)"
+          "[C](undefined)",
+          "[C++](#c-2)"
         ]
       },
       {
@@ -264,6 +265,27 @@
               "3",
               "[@Rox-](https://github.com/Rox-)/[**android_kernel_samsu…**](https://github.com/Rox-/android_kernel_samsung_s3ve3g)",
               "Kernel for Samsung Galaxy S3 Neo",
+              ""
+            ]
+          ]
+        }
+      },
+      {
+        "h3": "C++ #"
+      },
+      {
+        "table": {
+          "headers": [
+            ":star2:",
+            "Name",
+            "Description",
+            "🌍"
+          ],
+          "rows": [
+            [
+              "8",
+              "[@irajkovic](https://github.com/irajkovic)/[**visualization**](https://github.com/irajkovic/visualization)",
+              "Realtime data visualization and control panel with graphical editor. Implemented in C++ and Qt.",
               ""
             ]
           ]
