--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
           "[C](undefined)",
           "[C++](#c-2)",
           "[PHP](#php)",
-          "[Python](#python)"
+          "[Python](#python)",
+          "[Ruby](#ruby)"
         ]
       },
       {
@@ -390,6 +391,39 @@
               "2",
               "[@segvic](https://github.com/segvic)/[**plugin.video.mojaweb…**](https://github.com/segvic/plugin.video.mojawebtv)",
               "Moja webTV",
+              ""
+            ]
+          ]
+        }
+      },
+      {
+        "h3": "Ruby #"
+      },
+      {
+        "table": {
+          "headers": [
+            ":star2:",
+            "Name",
+            "Description",
+            "🌍"
+          ],
+          "rows": [
+            [
+              "28",
+              "[@sidonath](https://github.com/sidonath)/[**room-reservation**](https://github.com/sidonath/room-reservation)",
+              "",
+              ""
+            ],
+            [
+              "5",
+              "[@hkraji](https://github.com/hkraji)/[**mx-validator**](https://github.com/hkraji/mx-validator)",
+              "Validate emails via MX records",
+              "[:arrow_upper_right:](https://rubygems.org/gems/mx-validator/versions/0.0.1)"
+            ],
+            [
+              "2",
+              "[@hkraji](https://github.com/hkraji)/[**fertilizer**](https://github.com/hkraji/fertilizer)",
+              "Set of tasks that allows us to enrich our Rails projects.",
               ""
             ]
           ]
