--- a/package.json
+++ b/package.json
@@ -125,6 +125,12 @@
               ""
             ],
             [
+              "3",
+              "[@TheAdnan](https://github.com/TheAdnan)/[**BuVRek**](https://github.com/TheAdnan/BuVRek)",
+              "Virtual Burek",
+              "[:arrow_upper_right:](https://virtual-burek.glitch.me/)"
+            ],
+            [
               "2",
               "[@amir-hadzic](https://github.com/amir-hadzic)/[**jscommits**](https://github.com/amir-hadzic/jscommits)",
               "Javascript widget for showing latest github commits",
@@ -141,6 +147,12 @@
               "[@nenadg](https://github.com/nenadg)/[**extjs-tag-cloud**](https://github.com/nenadg/extjs-tag-cloud)",
               "Ext JS tag cloud component",
               ""
+            ],
+            [
+              "2",
+              "[@TheAdnan](https://github.com/TheAdnan)/[**focustube**](https://github.com/TheAdnan/focustube)",
+              "Firefox WebExtension for watching YouTube videos while scrolling down the comments",
+              "[:arrow_upper_right:](https://addons.mozilla.org/en-US/firefox/addon/focus-tube/)"
             ]
           ]
         }
