--- a/package.json
+++ b/package.json
@@ -97,6 +97,12 @@
               "[:arrow_upper_right:](http://www.randomshouting.com/uedit)"
             ],
             [
+              "23",
+              "[@adnanrahic](https://github.com/adnanrahic)/[**nodejs-restful-api**](https://github.com/adnanrahic/nodejs-restful-api)",
+              "Simple Node.js REST API Tutorial",
+              ""
+            ],
+            [
               "7",
               "[@nenadg](https://github.com/nenadg)/[**otvoreni-budzet**](https://github.com/nenadg/otvoreni-budzet)",
               "Digitalnija verzija budžeta Republike Srpske",
@@ -112,6 +118,12 @@
               "5",
               "[@nenadg](https://github.com/nenadg)/[**jasmine-node-jsdom-e…**](https://github.com/nenadg/jasmine-node-jsdom-extjs-testing-tool)",
               "Functional front-end Ext.JS testing automation tool using jasmine-node and jsdom",
+              ""
+            ],
+            [
+              "5",
+              "[@adnanrahic](https://github.com/adnanrahic)/[**boilerplate-api**](https://github.com/adnanrahic/boilerplate-api)",
+              "Lightweight Node.js boilerplate API with Docker support, test coverage and circle.ci support.",
               ""
             ],
             [
