Added Botnjak repo, updated number of stars on my other projects

--- a/package.json
+++ b/package.json
@@ -115,6 +115,18 @@
               ""
             ],
             [
+              "6",
+              "[@TheAdnan](https://github.com/TheAdnan)/[**focustube**](https://github.com/TheAdnan/focustube)",
+              "Firefox WebExtension for watching YouTube videos while scrolling down the comments",
+              "[:arrow_upper_right:](https://addons.mozilla.org/en-US/firefox/addon/focus-tube/)"
+            ],
+            [
+              "6",
+              "[@TheAdnan](https://github.com/TheAdnan)/[**Botnjak**](https://github.com/TheAdnan/Botnjak)",
+              "Twitter bot script written in PHP",
+              "[:arrow_upper_right:](https://twitter.com/botnjak)"
+            ],
+            [
               "5",
               "[@nenadg](https://github.com/nenadg)/[**jasmine-node-jsdom-e…**](https://github.com/nenadg/jasmine-node-jsdom-extjs-testing-tool)",
               "Functional front-end Ext.JS testing automation tool using jasmine-node and jsdom",
@@ -139,17 +151,12 @@
               ""
             ],
             [
-              "3",
+              "4",
               "[@TheAdnan](https://github.com/TheAdnan)/[**BuVRek**](https://github.com/TheAdnan/BuVRek)",
               "Virtual Burek",
               "[:arrow_upper_right:](https://virtual-burek.glitch.me/)"
             ],
-            [
-              "3",
-              "[@TheAdnan](https://github.com/TheAdnan)/[**focustube**](https://github.com/TheAdnan/focustube)",
-              "Firefox WebExtension for watching YouTube videos while scrolling down the comments",
-              "[:arrow_upper_right:](https://addons.mozilla.org/en-US/firefox/addon/focus-tube/)"
-            ],
+          
             [
               "2",
               "[@amir-hadzic](https://github.com/amir-hadzic)/[**jscommits**](https://github.com/amir-hadzic/jscommits)",
