:arrow_up: 1.0.0 :tada:

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
           "[Python](#python)",
           "[Ruby](#ruby)",
           "[Scala](#scala)",
-          "[TypeScript](#typescript)",
+          "[TypeScript](#typescript)"
         ]
       },
       {
@@ -156,7 +156,6 @@
               "Virtual Burek",
               "[:arrow_upper_right:](https://virtual-burek.glitch.me/)"
             ],
-          
             [
               "2",
               "[@amir-hadzic](https://github.com/amir-hadzic)/[**jscommits**](https://github.com/amir-hadzic/jscommits)",
