--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "projects"
   ],
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -30,8 +30,11 @@
     "menu/",
     "cli.js",
     "index.js",
+    "index.d.ts",
+    "package-lock.json",
     "bloggify.js",
-    "bloggify.json"
+    "bloggify.json",
+    "bloggify/"
   ],
   "repository": {
     "type": "git",
